[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fish/FishTemplate/FishTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fish/Behaviours/ShootProjectiles/ShootProjectiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fish/ArcherFish/ArcherFish.gd" type="Script" id=3]
[ext_resource path="res://Fish/Behaviours/DetectionArea/DetectionArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fish/ArcherFish/FishSprite.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 173.142

[sub_resource type="CircleShape2D" id=2]
radius = 1536.56

[node name="ArcherFish" instance=ExtResource( 1 )]
script = ExtResource( 3 )
amount_needed_to_catch = 50.0
fish_recovery_amount = 0.0
damage = 1
number_of_projectiles_shot_each_round = 1

[node name="FishSprite" parent="KinematicBody" index="2"]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="KinematicBody/FishSprite" index="0"]

[node name="CollisionShape2D" parent="KinematicBody/ProximityArea" index="0"]
shape = SubResource( 1 )

[node name="ShootProjectiles" parent="KinematicBody" index="6" instance=ExtResource( 2 )]
speed = 500.0

[node name="Timer" type="Timer" parent="KinematicBody/ShootProjectiles" index="0"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="DetectionArea" parent="KinematicBody" index="7" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="KinematicBody/DetectionArea" index="0"]
shape = SubResource( 2 )

[connection signal="timeout" from="KinematicBody/ShootProjectiles/Timer" to="." method="_on_Timer_timeout"]

[editable path="KinematicBody/DetectionArea"]
